// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutListListItem /> with additional className matches its snapshot 1`] = `
<li
  className="y-layoutList--item TEST_CLASSNAME"
/>
`;

exports[`<LayoutListListItem /> with child content matches its snapshot 1`] = `
<li
  className="y-layoutList--item"
>
  list item content
</li>
`;

exports[`<LayoutListListItem /> without props matches its snapshot 1`] = `
<li
  className="y-layoutList--item"
/>
`;
